--- a/csc301proj/Site/css/style.css
+++ b/csc301proj/Site/css/style.css
@@ -712,7 +712,7 @@
 		}
 
 		table th {
-			color: #545454;
+			color: green; /*#545454*/
 			font-size: 0.9em;
 			font-weight: 700;
 			padding: 0 0.75em 0.75em 0.75em;
